@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/150
+  The prototype of PyStackless_GetCurrentId(void) was missing from
+  stackless_api.h. It is now defined.
+
 
 What's New in Stackless 3.6.4?
 ==============================
